--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
     <script src="JS\darkMode.js" defer></script>
     <script src="JS\login.js" defer></script>
-    <title>Carrotech</title>
+    <title>Carrotech|Login</title>
 </head>
 <body>
 
