--- a/login.html
+++ b/login.html
@@ -52,11 +52,11 @@
                     <img src="https://static.vecteezy.com/system/resources/previews/000/575/345/original/vector-login-sign-icon.jpg" alt="ENTRAR NO SISTEMA" class="img-fluid" width="80%" height="60%">
                 </div>
                 <div class="col-12" id="link-container">
-                    <a href="registro.html">Não possui uma conta?</a>
+                    <a href="#">Não possui uma conta?</a>
                 </div>
             </div>
             <div class="col-md-9 order-1">
-                <h2>FACA SEU LOGIN</h2>
+                <h2>FAÇA SEU LOGIN</h2>
                 <form >
                     <div class="form-floating mb-2" >
                         <input type="email" class="form-control border-dark" name="email" id="email" placeholder="DIGITE SEU EMAIL:">
