UPT SLIDE E LOGIN COLOR

--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
               <div class="carousel-item active">
                 <img src="assets\Mts1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block bg-opacity-50 bg-black">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>Mitsubishi Pajero Outlander 2022</h5>
+                  <p>Se o seu dia a dia precisa muito espaço e segurança para cumprir todas as tarefas, o Outlander é o carro perfeito pra você.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="assets\NissanZ.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block bg-opacity-50 bg-black">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>Nissan Z Proto 2022</h5>
+                  <p>O Nissan Z 2022 supostamente terá um preço inicial de US$ 34.995, o que o tornaria muito mais atingível do que o GR Supra 2.0 (US$ 42.990).</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="assets\Tesla1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block bg-opacity-50 bg-black">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Tesla Model S 2022</h5>
+                  <p>Novos Tesla Model S e X 2022 ganham volante ‘de avião’.</p>
                 </div>
               </div>
             </div>
