--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <footer class="row py-5 my-5 border-top">
         <div class="col">      
         </div>
-    
+        asdasdasdasdasd
         <div class="col-md-2 col-sm-12">
             <img src="assets\logo.png" class="logo-footer" alt="">
             <p class="text-muted">Todos os direitos reservados ©2022</p>
