Atualização de notícias index.html

--- a/index.html
+++ b/index.html
@@ -108,6 +108,25 @@
                             no mês de maio de 2022, adquiridos no Plano Sign & Go.</span>
                         </p>
                     </h3>
+                    <img src="assets\bmw_m760e_xdrive_81.jpg" alt="" class="col-4 mt-3 foto-noticia">
+                    <h3 class="col-7 mt-3 titulo-noticia">BMW Série 7 terá versões eletrificadas M760e e M70 topo em 2023
+                        <br><p class="texto-noticia mt-3"><span>A BMW apresentou esta semana o BMW Série 7 2023, redesenhado, o qual estará à venda no final 
+                          deste ano na Europa, EUA e China, mas nem todas as versões estarão disponíveis no lançamento 
+                          do mercado.</span>
+                        </p>
+                    </h3>
+                    <img src="assets\Novo-BMW-X1-2023.jpg" alt="" class="col-4 mt-3 foto-noticia">
+                    <h3 class="col-7 mt-3 titulo-noticia">Novos BMW X1 e iX1 elétrico 2023 têm imagens e detalhes revelados
+                        <br><p class="texto-noticia mt-3"><span>A BMW iniciou a contagem regressiva para o lançamento 
+                          da terceira geração de modelos do BMW X1 – o qual terá uma versão totalmente elétrica, o BMW iX1.</span>
+                        </p>
+                    </h3>
+                    <img src="assets\BMW-i7-xDrive-203.jpg" alt="" class="col-4 mt-3 foto-noticia">
+                    <h3 class="col-7 mt-3 titulo-noticia">Novo BMW Série 7 2023 ganha versão elétrica i7
+                        <br><p class="texto-noticia mt-3"><span>A BMW apresentou a linha 2023 do BMW Série 7, com 
+                          reformulação estética, mais potência no motor V8 e uma versão totalmente elétrica i7.</span>
+                        </p>
+                    </h3>
               </div>
 
           </div>
