--- a/faleconosco.html
+++ b/faleconosco.html
@@ -14,7 +14,7 @@
     <title>Carrotech|Fale Conosco</title>
 </head>
 <body>
-    <header class="container">
+    <header class="sticky-top">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img src="assets\logo.png" alt="" class="logo-header"></a>
