--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <header class="container ">
+    <header class="sticky-top">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img src="assets\logo.png" alt="" class="logo-header"></a>
