--- a/faleconosco.html
+++ b/faleconosco.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
     <script src="JS\darkMode.js" defer></script>
     <script src="JS\form.js" defer></script>
+    <script src="JS\user.js" defer></script>
     <title>Carrotech|Fale Conosco</title>
 </head>
 <body>
@@ -34,10 +35,14 @@
                     </li>                  
                     </ul>
                     <div>
+                        <text id="txtUser"></text>
+                    </div>
+                    <div>
                         <button onclick="darkMode()" class="btn-darkMode btn-dark btn-sm">DarkMode</button>
                     </div>
                     <div>
-                        <a class="nav-link textLogin" href="login.html"><img src="assets\login-icon.png" alt=""> Login</a>
+                        <a class="nav-link textLogin" href="login.html"><img src="assets\login-icon.png" alt=""> <text id="txtLogin"></text>
+                        </a>
                     </div>
               </div>
             </div>
