--- a/sobre.html
+++ b/sobre.html
@@ -20,7 +20,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img src="assets\logo.png" alt="" class="logo-header"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                 <span class="navbar-toggler-icon"></span>
+                 <span class="navbar-toggler-icon" id="btn-expande"><img class="icon-nav-toggler"src="assets\nav-toggler-icon.png" alt="" srcset=""></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -31,14 +31,14 @@
                         <a class="nav-link textHeader" href="sobre.html"><span class="textNav text-black">Sobre</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link textHeader" href="faleconosco.html"><span class="textNav">Fale Conosco</span></a>
+                        <a class="nav-link textHeader textFale" href="faleconosco.html"><span class="textNav">Fale Conosco</span></a>
                     </li>                  
                     </ul>
                     <div>
-                        <text id="txtUser"></text>
+                        <button onclick="darkMode()" class="btn-darkMode btn-dark btn-sm"><img src="assets\darkmode-icon.png" alt="" class="icon-dark"></button>
                     </div>
                     <div>
-                        <button onclick="darkMode()" class="btn-darkMode btn-dark btn-sm">DarkMode</button>
+                      <text id="txtUser" class="text-black font-weight-bold"></text>
                     </div>
                     <div>
                         <a class="nav-link textLogin" href="login.html"><img src="assets\login-icon.png" alt=""> <text id="txtLogin"></text>
@@ -48,7 +48,7 @@
             </div>
         </nav>
     </header>
-    <main class="container" id="main">
+    <main class="container shadow-lg pb-4" id="main">
         <div class="container">
             <h1 class="border-bottom">Sobre o CarroTech.com</h1>
             <p>
@@ -69,10 +69,10 @@
             <p>
                 <p>E-Mails de Contato :</p>
                 Envio de press releases:<br>
-                releases@carrotech.com <br><br>
+                <p>releases@carrotech.com</p>
                 Contato geral:<br>
-                contato@carrotech.com
-            </p>
+                <p>contato@carrotech.com</p>
+            </p>     
         </div>
     
     </main>
