Update no nome do intagram-icon

--- a/faleconosco.html
+++ b/faleconosco.html
@@ -96,7 +96,7 @@
             <li class="nav-item mb-2"><a href="https://twitter.com/" class="nav-link p-0 text-muted"><img src="assets\twitter-icon.png" class="icon m-1" alt="">Twitter</a></li>
             <li class="nav-item mb-2"><a href="https://facebook.com/" class="nav-link p-0 text-muted"><img src="assets\facebook-icon.png" class="icon m-1" alt="">Facebook</a></li>
             <li class="nav-item mb-2"><a href="https://youtube.com/" class="nav-link p-0 text-muted"><img src="assets\youtube-icon.png" class="icon m-1" alt="">Youtube</a></li>
-            <li class="nav-item mb-2"><a href="https://Instagram.com/" class="nav-link p-0 text-muted"><img src="assets\instagram-icon.png" class="icon m-1" alt="">Instagram</a></li>
+            <li class="nav-item mb-2"><a href="https://Instagram.com/" class="nav-link p-0 text-muted"><img src="assets\Insta-icone.png" class="icon m-1" alt="">Instagram</a></li>
           </ul>
         </div>
     
