--- a/faleconosco.html
+++ b/faleconosco.html
@@ -12,7 +12,9 @@
     <script src="JS\darkMode.js" defer></script>
     <script src="JS\form.js" defer></script>
     <script src="JS\user.js" defer></script>
+    <link rel="icon" href="assets\favicon-carrotech.png" type="image/png">
     <title>Carrotech|Fale Conosco</title>
+
 </head>
 <body>
     <header class="sticky-top">
