--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
     <script src="JS\darkMode.js" defer></script>
     <script src="JS\user.js" defer></script>
+    <link rel="icon" href="assets\favicon-carrotech.png" type="image/png">
     <title>Carrotech|Home</title>
 </head>
 <body>
